--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Swift Project
+name: Swift Build & Test
 
 on:
   push:
@@ -7,24 +7,21 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch: # Allows manual execution
 
 jobs:
   build:
-    runs-on: macos-latest  # Use macOS runner to compile Swift
+    runs-on: macos-latest # Use macOS runner for Swift
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies (if needed)
-        run: |
-          brew update
-          brew install swiftlint  # Example: Install SwiftLint (if needed)
+      - name: Set Up Swift
+        run: swift --version # Verify Swift installation
 
-      - name: Build the project
-        run: |
-          swift build -v  # Use Swift Package Manager (SPM)
+      - name: Build Swift Project
+        run: swift build -v # Compile Swift code
 
-      - name: Run tests
-        run: |
-          swift test  # Run unit tests
+      - name: Run Tests
+        run: swift test -v # Execute tests if available
