--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Swift Build & Test
+name: Xcode Build & Test
 
 on:
   push:
@@ -7,21 +7,21 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch: # Allows manual execution
+  workflow_dispatch: # Allows manual trigger
 
 jobs:
   build:
-    runs-on: macos-latest # Use macOS runner for Swift
+    runs-on: macos-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set Up Swift
-        run: swift --version # Verify Swift installation
+      - name: Select Xcode Version
+        run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
 
-      - name: Build Swift Project
-        run: swift build -v # Compile Swift code
+      - name: Build Xcode Project
+        run: xcodebuild -scheme "YourSchemeName" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' build
 
       - name: Run Tests
-        run: swift test -v # Execute tests if available
+        run: xcodebuild -scheme "YourSchemeName" -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' test
